Mark Reduce when activity is deleted

--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -61,7 +61,7 @@
                     {{ student.name | titlecase }}
                   </span>
                   <span class="text-700 font-medium mb-1">
-                    ( {{ student.roll_no }} )
+                    ( {{ student.roll_no | uppercase }} )
                   </span>
                   <span class="text-700 font-medium mb-2">
                     {{ student.year }}
