--- a/src/app/component/admin/user-view/activity-table/activity-table.component.html
+++ b/src/app/component/admin/user-view/activity-table/activity-table.component.html
@@ -93,7 +93,7 @@
               class="p-button-rounded p-button-danger p-button-outlined mr-3"
               pTooltip="Delete Activity"
               tooltipPosition="top"
-              (click)="deleteActivity(activity.id)"
+              (click)="deleteActivity($event, activity.id)"
               *ngIf="!activity.is_locked"
             ></button>
           </td>
