Entrepreneurship activity connected

--- a/src/app/pages/activity/entrepreneurship/entrepreneurship.component.html
+++ b/src/app/pages/activity/entrepreneurship/entrepreneurship.component.html
@@ -43,7 +43,7 @@
           id="mode"
           placeholder="Type"
           optionLabel="label"
-          formControlName="mode"
+          formControlName="eventMode"
           (onChange)="onTypeChanged($event)"
         ></p-dropdown>
       </div>
@@ -60,7 +60,8 @@
           inputId="range"
         ></p-calendar>
       </div>
-      <div class="field mb-4 col-12 md:col-6">
+      <div class="field mb-4 coltitle
+      title-12 md:col-6">
         <label for="mark" class="font-medium text-900"> Mark </label>
         <input
           id="mark"
