--- a/src/app/pages/view-activity/view-activity.component.html
+++ b/src/app/pages/view-activity/view-activity.component.html
@@ -15,12 +15,12 @@
               class="p-button-danger p-button-text"
             ></button>
           </div>
-          <div class="mr-8 text-center">
+          <div class="mr-0 lg:mr-8 text-center">
             <div class="font-medium text-2xl text-900">
-              {{ activityDetial?.uploader_id.name }}
+              {{ activityDetial?.uploader_id.name | titlecase }}
             </div>
             <div class="text-700 mb-2">
-              ( {{ activityDetial?.uploader_id.roll_no }} |
+              ( {{ activityDetial?.uploader_id.roll_no | uppercase }} |
               {{ activityDetial?.uploader_id.year }} )
             </div>
           </div>
@@ -28,15 +28,21 @@
         <div class="grid grid-nogutter border-top-2 surface-border mt-2">
           <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.event_name">
             <div class="text-500 font-medium mb-2">Event Name</div>
-            <div class="text-900">{{ activityDetial?.event_name }}</div>
+            <div class="text-900">
+              {{ activityDetial?.event_name | titlecase }}
+            </div>
           </div>
           <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.club_name">
             <div class="text-500 font-medium mb-2">Club Name</div>
-            <div class="text-900">{{ activityDetial?.club_name }}</div>
+            <div class="text-900">
+              {{ activityDetial?.club_name | titlecase }}
+            </div>
           </div>
           <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.event_venue">
             <div class="text-500 font-medium mb-2">Event Venue</div>
-            <div class="text-900">{{ activityDetial?.event_venue }}</div>
+            <div class="text-900">
+              {{ activityDetial?.event_venue | titlecase }}
+            </div>
           </div>
           <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.event_date">
             <div class="text-500 font-medium mb-2">Event Date</div>
@@ -46,11 +52,22 @@
           </div>
           <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.title">
             <div class="text-500 font-medium mb-2">Title</div>
-            <div class="text-900">{{ activityDetial?.title }}</div>
+            <div class="text-900">{{ activityDetial?.title | titlecase }}</div>
           </div>
           <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.position">
             <div class="text-500 font-medium mb-2">Position</div>
-            <div class="text-900">{{ activityDetial?.position }}</div>
+            <div class="text-900">
+              {{ activityDetial?.position | titlecase }}
+            </div>
+          </div>
+          <div
+            class="col-12 md:col-4 p-3"
+            *ngIf="activityDetial?.workshop_name"
+          >
+            <div class="text-500 font-medium mb-2">Workshop Name</div>
+            <div class="text-900">
+              {{ activityDetial?.workshop_name | titlecase }}
+            </div>
           </div>
           <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.prize_amount">
             <div class="text-500 font-medium mb-2">Prize Amount</div>
@@ -60,13 +77,25 @@
             <div class="text-500 font-medium mb-2">Mode</div>
             <div class="text-900">{{ activityDetial?.mode }}</div>
           </div>
+          <div
+            class="col-12 md:col-4 p-3"
+            *ngIf="activityDetial?.event_date_range"
+          >
+            <div class="text-500 font-medium mb-2">Date Range</div>
+            <div class="text-900">
+              {{ date[0] | date: "mediumDate" }} -
+              {{ date[1] | date: "mediumDate" }}
+            </div>
+          </div>
           <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.event_mode">
             <div class="text-500 font-medium mb-2">Event Mode</div>
-            <div class="text-900">{{ activityDetial?.event_mode }}</div>
+            <div class="text-900">
+              {{ activityDetial?.event_mode | titlecase }}
+            </div>
           </div>
           <div class="col-12 md:col-4 p-3" *ngIf="activityDetial?.type">
             <div class="text-500 font-medium mb-2">Type</div>
-            <div class="text-900">{{ activityDetial?.type }}</div>
+            <div class="text-900">{{ activityDetial?.type | titlecase }}</div>
           </div>
           <div class="col-12 md:col-4 p-3">
             <div class="text-500 font-medium mb-2">Mark</div>
@@ -120,7 +149,7 @@
                 pRipple
                 type="button"
                 label="Delete Activity"
-                class="p-button-raised p-button-danger mx-2"
+                class="p-button-raised p-button-danger mx-2 hidden lg:block"
                 icon="pi pi-trash"
                 *ngIf="!activityDetial?.is_locked"
                 (click)="deleteActivity()"
@@ -130,7 +159,7 @@
                 pRipple
                 type="button"
                 label="Activity Locked"
-                class="p-button-raised p-button-help mx-2 hidden lg:block"
+                class="p-button-raised p-button-help mx-2"
                 icon="pi pi-lock"
                 *ngIf="activityDetial?.is_locked"
               ></button>
