Added backend connectivity for gate govt exam

--- a/src/app/component/user/activity-list/activity-list.component.html
+++ b/src/app/component/user/activity-list/activity-list.component.html
@@ -26,6 +26,7 @@
             {{ activity?.event_name | titlecase }}
             {{ activity?.club_name | titlecase }}
             {{ activity?.course_name | titlecase }}
+            {{ activity?.exam_name | titlecase }}
           </td>
           <td class="hidden xl:block">
             {{ activity?.mark }}
