--- a/src/app/component/admin/user-view/activity-table/activity-table.component.html
+++ b/src/app/component/admin/user-view/activity-table/activity-table.component.html
@@ -33,6 +33,7 @@
             {{ activity?.event_name | titlecase }}
             {{ activity?.club_name | titlecase }}
             {{ activity?.course_name | titlecase }}
+            {{ activity?.exam_name | titlecase }}
           </td>
           <td>{{ activity?.mark }}</td>
           <td>
